fix(Modal): adjust modal gap for improved spacing and layout consistency

--- a/src/components/Modal/styles.module.css
+++ b/src/components/Modal/styles.module.css
@@ -1,12 +1,15 @@
 .modal {
   --transition-duration: 0.2s;
 
+  box-sizing: border-box;
+  max-width: min(800px, 100% - 2 * var(--inline-spacing));
+
   background-color: #fff;
   border: none;
   border-radius: 20px;
   padding: var(--spacing--xl);
   flex-direction: column;
-  gap: var(--spacing--md);
+  gap: var(--spacing--lg);
 
   opacity: 0;
   transition-property: display opacity;
